fix: layout shifting in jobs footer

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -569,6 +569,9 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
+  .mt-auto {
+    margin-top: auto;
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
